<resources>
    <string name="app_name">Nabil CMS</string>
    <string name="action_settings">Settings</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Password Confirmation</string>
    <string name="btn_sign_up">Sign Up</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_password_confirm">Passwords are NOT the same</string>
</resources>
